--- a/webapp/package.json
+++ b/webapp/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {},
   "devDependencies": {
-    "amdefine" : ">=1.0.0",
+    "amdefine": ">=1.0.0",
     "grunt": "~0.4.0",
     "grunt-connect-proxy": "~0.2.0",
     "grunt-contrib-coffee": "~0.7.0",
@@ -16,5 +16,8 @@
     "grunt-contrib-requirejs": "~0.4.1",
     "grunt-contrib-uglify": "~0.2.4",
     "grunt-contrib-watch": "^0.6.1"
+  },
+  "dependencies": {
+    "express": "^4.13.4"
   }
 }
